Code cleanup
Test: existing
Bug: N/A
Change-Id: I6c2429e1ff1ff0b7461416063fb1b21bf1f5a72b

GitOrigin-RevId: 3db374fc4962ec600cbf415e13dc6dc2579cb39b